--- a/my2.css
+++ b/my2.css
@@ -18,19 +18,22 @@ body {
 }
 
 .box .banner{
+    height: 120px;
+    
     border-bottom: 1px solid;
     color: rgba(240, 248, 255, 0.418);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    display: flex;
 }
 
 
 .box .banner .zbox{
-    font-size: 40px;
+    font-size: 25px;
     height: 100px;
-    width: auto;
-    float: left;
+    
+    
     color: aliceblue;
-    background-color: rgba(15, 97, 129, 0.384);
+    
     
 }
 .box .banner .zbox > button{
@@ -51,7 +54,7 @@ body {
     
     font-size: 20px;
     font-family: "楷体";
-    height: 30px;
+    height: 40px;
     width: 100px;
     border-width: 0.1px 0.1px 0.1px 0.1px;
     border-color: rgba(0, 0, 0, 0.329);
@@ -62,17 +65,17 @@ body {
 .box .banner .ybox{
     font-size: 20px;
     height: 100px;
-    width: auto;
+    
     
     color: aliceblue;
-    background-color: rgba(15, 97, 129, 0.384);
+
 }
 .box .banner .ybox > p{
     float: right;
     
 }
 .box .banner .ybox > a{
-    margin-top: 20px;
+    margin-top: 10px;
     float: right;
     color: aliceblue;
     
@@ -127,7 +130,7 @@ body {
 
 .box .banner1 .ybox1{
     display: flex;
-    height: 500px;
+    height: 400px;
     padding-top: 15px;
     margin-left: 50px;
     margin-right: 50px;
@@ -147,7 +150,7 @@ body {
 
     font-family: "楷体";
     font-size: 24px;
-
+overflow:auto
 }
 
 
