--- a/my6.css
+++ b/my6.css
@@ -95,7 +95,7 @@ body {
     font-size: 20px;
     font-family: "楷体";
     font-weight: bold;
-    height: calc(50vh - 4px);
+    height: 50vh;
     width: 100px;
     border-width: 0px 0px 0px 0px;
     color: rgb(0, 0, 0);
@@ -111,7 +111,7 @@ body {
     font-size: 20px;
     font-family: "楷体";
     font-weight: bold;
-    height: calc(50vh - 4px);
+    height: 50vh;
     width: 100px;
     border-width: 0px 0px 0px 0px;
     color: rgb(255, 255, 255);
