--- a/my5.css
+++ b/my5.css
@@ -77,6 +77,7 @@ body {
     color: rgba(240, 248, 255, 0.418);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     background-color: rgba(250, 235, 215, 0.253);
+    
 }
 .box .zuoce > button{
     padding: auto;
@@ -100,7 +101,7 @@ body {
     font-size: 20px;
     font-family: "楷体";
     font-weight: bold;
-    height: calc(50vh );
+    height: 50vh;
     width: 100px;
     border-width: 0px 0px 0px 0px;
     color: rgb(255, 255, 255);
@@ -109,9 +110,9 @@ body {
     
 }
 .box .youce .fabu{
-    padding-top: 20px;
+
    display: flex;
-   height: calc(50vh );
+   height: 50vh;
     font-size: 20px;
     font-family: "楷体";
     font-weight: bold;
@@ -119,10 +120,10 @@ body {
     border-width: 0px 0px 0px 0px;
    color: rgb(0, 0, 0);
     background-color: rgba(202, 168, 127, 0.281);
-    
+    overflow: auto;
 }
 .box .youce .fankui{
-    padding-top: 20px;
+    display: flex;
     height: calc(50vh );
     font-size: 20px;
     font-family: "楷体";
@@ -131,4 +132,5 @@ body {
     border-width: 0px 0px 0px 0px;
     color: rgb(0, 0, 0);
     background-color: rgba(255, 228, 196, 0.281);
+    overflow: auto;
 }
